# Resume-Builder

./: .gitignore  README.md  app.py  genResume.py  pyproject.toml  requirements.txt
src/: app.py
